plugins {
    id 'antlr'
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    antlr group: 'org.antlr', name: 'antlr4', version: '4.9.1'
    compile group: 'org.antlr', name: 'antlr4-runtime', version: '4.9.1'
}

generateGrammarSource {
    maxHeapSize = "64m"
    arguments += ["-visitor", "-long-messages"]
    outputDirectory = file("src/main/java/com/efscript/antlr")
}

sourceCompatibility = 11

application {
    // Define the main class for the application.
    mainClass = 'com.efscript.Main'
}

sourceSets {
    main {
        java {
            srcDirs = ["src/main/java"]
        }
        resources {
            srcDirs = ["src/main/resources"]
        }
    }
}